--- a/dataprep101/readme
+++ b/dataprep101/readme
@@ -1,4 +1,5 @@
-Whath the associated Youtube walkthrough video to understand what this data is about
+Whath the associated Youtube Cloud Dataprep 101 walkthrough video to understand what this data is about
+https://youtu.be/MmVokoKH97k
 
 The 2 data files can be imported from the Cloud Dataprep flow workspace 
 
