--- a/dataprep101/readme
+++ b/dataprep101/readme
@@ -1,7 +1,11 @@
 Whath the associated Youtube Cloud Dataprep 101 walkthrough video to understand what this data is about
 https://youtu.be/MmVokoKH97k
 
-The 2 data files can be imported from the Cloud Dataprep flow workspace 
-
-The .wrangle file contains the Cloud Dataprep recipe steps that you can copy and past one by one in the data transformation grid interface. 
-Display the recipe, add a new recipe step and past the recipe.
+1) Download the 3 file to your local disk
+2) Go to clouddataprep.com 
+3) Click the Library icon on the left and import the 2 csv files
+4) Click the Flow icon on the left, click ... "Import Flow" and import the flow zip file 
+4) The 2 data files can be imported from the Cloud Dataprep flow workspace 
+5) Click the newly created Marketing Analytics Walkthrough Certification flow
+6) If the sources are not mapped, connect the 2 data sources to the recipe
+7) Edit the recipe "Advertising_Clickstream_walkthrough" and start wrangling
